[tool.poetry]
name = "nopeusbotti"
version = "0.0.1"
description = ""
authors = ["Juuso Meriläinen <juusomer@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
folium = "^0.12.1"
selenium = "^4.4.3"
tweepy = "^4.10.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nopeusbotti = 'nopeusbotti.cli:main'

[tool.isort]
profile = "black"