[tool.poetry]
name = "nopeusbotti"
version = "0.0.1"
description = ""
authors = ["Juuso Meriläinen <juusomer@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
paho-mqtt = "^1.6.1"
pandas = "^1.4.4"
matplotlib = "^3.5.3"
tweepy = "^4.10.1"
click = "^8.1.3"
contextily = "^1.2.0"
geopandas = "^0.11.1"
gql = {extras = ["aiohttp"], version = "^3.4.0"}
seaborn = "^0.12.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nopeusbotti = 'nopeusbotti.cli:nopeusbotti'
nopeusbotti-statistics = 'nopeusbotti.cli:nopeusbotti_statistics'

[tool.isort]
profile = "black"